REGRESSION (r259589): Google Maps background layer fades out and back in https://bugs.webkit.org/show_bug.cgi?id=210992

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-05-14
Reviewed by Dean Jackson.

ANGLE rendering feedback loop detection was incorrect if a texture attached
to a framebuffer was also bound to an active texture unit, and then that texture
unit became inactive because a sampler uniform was set.

* src/libANGLE/Context.cpp:
(gl::Context::onSamplerUniformChange):
* src/libANGLE/State.cpp:
(gl::State::setTextureIndexInactive):
* src/libANGLE/State.h:

Canonical link: https://commits.webkit.org/224844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261751 268f45cc-cd09-0410-ab3c-d52691b4dbfc